Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -31,7 +31,9 @@
                         <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft  AddressFieldOnly"
                                      value="#{tdcto.tdMasterData.acctOwnersDetail.physicalAddressStreet}"
                                      placeholder="Street Address 1"
+                                     maxlength="50"
                                      required="false">
+
                         </p:inputText>
                         <!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                                       placeholder="Street Address 2">
@@ -48,6 +50,7 @@
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                          value="#{tdcto.tdMasterData.acctOwnersDetail.physicalAddressCity}"
                                          placeholder="City"
+                                         maxlength="30"
                                          required="false">
                             </p:inputText>
                         </div>
@@ -80,6 +83,7 @@
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                          value="#{tdcto.tdMasterData.acctOwnersDetail.physicalAddressZipCode}"
                                          placeholder="Zip Code"
+                                         maxlength="20"
                                          required="false">
                             </p:inputText>
                         </div>
@@ -114,6 +118,7 @@
                         <div class="EmptyBox5"></div>
                         <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
                                      value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressStreet}"
+                                     maxlength="50"
                                      placeholder="Street Address 1">
                         </p:inputText>
                         <!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
@@ -130,6 +135,7 @@
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                          value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressCity}"
+                                         maxlength="30"
                                          placeholder="City">
                             </p:inputText>
                         </div>
@@ -159,6 +165,7 @@
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                          value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressZipCode}"
+                                         maxlength="20"
                                          placeholder="Zip Code">
                             </p:inputText>
                         </div>
@@ -210,6 +217,7 @@
                         <div class="EmptyBox5"></div>
                         <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
                                      value="#{tdcto.tdMasterData.jointAcctOwnersDetail.physicalAddressStreet}"
+                                     maxlength="50"
                                      placeholder="Street Address 1">
                         </p:inputText>
                         <!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
@@ -228,6 +236,7 @@
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                          value="#{tdcto.tdMasterData.jointAcctOwnersDetail.physicalAddressCity}"
+                                         maxlength="30"
                                          placeholder="City">
                             </p:inputText>
                         </div>
@@ -257,6 +266,7 @@
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                          value="#{tdcto.tdMasterData.jointAcctOwnersDetail.physicalAddressZipCode}"
+                                         maxlength="20"
                                          placeholder="Zip Code">
                             </p:inputText>
                         </div>
@@ -292,6 +302,7 @@
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
                                          value="#{tdcto.tdMasterData.jointAcctOwnersDetail.mailingAddressStreet}"
+                                         maxlength="50"
                                          placeholder="Street Address 1">
                             </p:inputText>
                             <!-- <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
@@ -308,6 +319,7 @@
                                 <div class="EmptyBox5"></div>
                                 <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                              value="#{tdcto.tdMasterData.jointAcctOwnersDetail.mailingAddressCity}"
+                                             maxlength="30"
                                              placeholder="City">
                                 </p:inputText>
                             </div>
@@ -335,6 +347,7 @@
                                 <div class="EmptyBox5"></div>
                                 <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                              value="#{tdcto.tdMasterData.jointAcctOwnersDetail.mailingAddressZipCode}"
+                                             maxlength="20"
                                              placeholder="Zip Code">
                                 </p:inputText>
                             </div>
