--- a/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
@@ -49,6 +49,7 @@
                     <div class="EmptyBox5"></div>
                     <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                  value="#{tdcto.tdMasterData.owneremploymentDetail.sourceOfIncome}"
+                                 maxlength="30"
                                  placeholder="Source Of Income"
                                  >
                     </p:inputText>
@@ -69,6 +70,7 @@
                         <p:inputText
                                 styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                 value="#{tdcto.tdMasterData.owneremploymentDetail.employerName}"
+                                maxlength="60"
                                 placeholder="Employer Name">
                         </p:inputText>
                     </div>
@@ -81,6 +83,7 @@
                         <p:inputText
                                 styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                 value="#{tdcto.tdMasterData.owneremploymentDetail.occupation}"
+                                maxlength="20"
                                 placeholder="Occupation">
                         </p:inputText>
                     </div>
@@ -96,6 +99,7 @@
                         <p:inputText
                                 styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                 value="#{tdcto.tdMasterData.owneremploymentDetail.typeOfBusiness}"
+                                maxlength="90"
                                 placeholder="Type of Business">
                         </p:inputText>
                     </div>
@@ -108,6 +112,7 @@
                         <p:inputText
                                 styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                 value="#{tdcto.tdMasterData.owneremploymentDetail.employerStreetAddress}"
+                                maxlength="50"
                                 placeholder="Employer Street Address">
                         </p:inputText>
                     </div>
@@ -141,6 +146,7 @@
                         <div class="EmptyBox5"></div>
                         <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                      value="#{tdcto.tdMasterData.owneremploymentDetail.employerCity}"
+                                     maxlength="30"
                                      placeholder="City">
                         </p:inputText>
                     </div>
@@ -168,6 +174,7 @@
                         <div class="EmptyBox5"></div>
                         <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                      value="#{tdcto.tdMasterData.owneremploymentDetail.employerZipCode}"
+                                     maxlength="20"
                                      placeholder="Zip Code">
                         </p:inputText>
                     </div>
@@ -230,6 +237,7 @@
                         <div class="EmptyBox5"></div>
                         <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                      placeholder="Source Of Income"
+                                     maxlength="30"
                                      value="#{tdcto.tdMasterData.jointEmploymentDetail.sourceOfIncome}"
                                      >
                         </p:inputText>
@@ -249,6 +257,7 @@
                             <div class="EmptyBox5"></div>
                             <p:inputText
                                     styleClass="Wid90 FS14 CustomWidthFA-Responsive"
+                                    maxlength="60"
                                     value="#{tdcto.tdMasterData.jointEmploymentDetail.employerName}"
                                     placeholder="Employer Name">
                             </p:inputText>
@@ -262,6 +271,7 @@
                             <p:inputText
                                     styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                     value="#{tdcto.tdMasterData.jointEmploymentDetail.occupation}"
+                                    maxlength="20"
                                     placeholder="Occupation">
                             </p:inputText>
                         </div>
@@ -278,6 +288,7 @@
                             <p:inputText
                                     styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                     value="#{tdcto.tdMasterData.jointEmploymentDetail.typeOfBusiness}"
+                                    maxlength="90"
                                     placeholder="Type of Business">
                             </p:inputText>
                         </div>
@@ -288,6 +299,7 @@
 
                             <div class="EmptyBox5"></div>
                             <p:inputText
+                                    maxlength="50"
                                     styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                     value="#{tdcto.tdMasterData.jointEmploymentDetail.employerStreetAddress}"
                                     placeholder="Employer Street Address">
@@ -305,6 +317,7 @@
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                          value="#{tdcto.tdMasterData.jointEmploymentDetail.employerCity}"
+                                         maxlength="30"
                                          placeholder="City">
                             </p:inputText>
                         </div>
@@ -331,6 +344,7 @@
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                          value="#{tdcto.tdMasterData.jointEmploymentDetail.employerZipCode}"
+                                         maxlength="20"
                                          placeholder="Zip Code">
                             </p:inputText>
                         </div>
