--- a/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
@@ -48,6 +48,7 @@
 								<p:inputText
 									value="#{tdcto.tdMasterData.acctOwnersDetail.spfName}"
 									styleClass="Wid100 CustomWidthFA-Responsive FS14"
+									maxlength="90"
 									placeholder="Name of SPF">
 								</p:inputText>
 							</div>
@@ -60,6 +61,7 @@
 								<p:inputText
 									value="#{tdcto.tdMasterData.acctOwnersDetail.spfRelationship}"
 									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									maxlength="90"
 									placeholder="Relationship">
 								</p:inputText>
 							</div>
@@ -75,6 +77,7 @@
 								<p:inputText
 									value="#{tdcto.tdMasterData.acctOwnersDetail.spfTitle}"
 									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									maxlength="50"
 									placeholder="Political Title">
 								</p:inputText>
 							</div>
@@ -88,6 +91,7 @@
 								<p:inputText
 									value="#{tdcto.tdMasterData.acctOwnersDetail.spfCountry}"
 									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									maxlength="50"
 									placeholder="Country Of Office">
 								</p:inputText>
 							</div>
@@ -120,6 +124,7 @@
 								<p:inputText
 									value="#{tdcto.tdMasterData.acctOwnersDetail.shareholderCompany}"
 									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									maxlength="90"
 									placeholder="Company Name">
 								</p:inputText>
 							</div>
@@ -133,6 +138,7 @@
 								<p:inputText
 									value="#{tdcto.tdMasterData.acctOwnersDetail.shareholderAddress}"
 									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									maxlength="90"
 									placeholder="Company Address">
 								</p:inputText>
 							</div>
@@ -147,6 +153,7 @@
 								<p:inputText
 									value="#{tdcto.tdMasterData.acctOwnersDetail.shareholderCity}"
 									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									maxlength="30"
 									placeholder="City">
 								</p:inputText>
 							</div>
@@ -192,7 +199,8 @@
 							<div class="EmptyBox5"></div>
 							<p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
 										 value="#{tdcto.tdMasterData.acctOwnersDetail.bdDetail}"
-								placeholder="Entity">
+										 maxlength="90"
+										 placeholder="Entity">
 							</p:inputText>
 						</div>
 					</div>
