Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -508,7 +508,7 @@
 
                                 <div class="EmptyBox5"></div>
                                 <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
-
+                                             value="#{tdcto.tdMasterData.electroicBankDetail.bankAcctName}"
                                              maxlength="90"
                                              placeholder="Bank Account Title">
                                 </p:inputText>
