Code checked in 9/26/2016

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
@@ -7,6 +7,7 @@
                 template="/template/common/template.xhtml">
 
     <f:metadata>
+        <f:viewParam name="l" value="#{tdcto.beanacctnum}"/>
         <f:viewParam name="acct" value="#{tdcto.beanacctnum}"/>
         <f:event type="preRenderView" listener="#{tdcto.startCTO}"/>
     </f:metadata>
