--- a/tcm/modules/web/src/main/webapp/setPassword.xhtml
+++ b/tcm/modules/web/src/main/webapp/setPassword.xhtml
@@ -52,28 +52,25 @@
                             <div class="EmptyBox10"></div>
                             <div class="Container100">
                                 <label class="sigupLabel">Password</label>
-                                    <p:password id="pwd1" styleClass="Wid100 Fleft MarAuto Fs14"
-                                                value="#{userBean.pwd1}"
-                                                
-                                                placeholder="Password"
-                                                feedback="true" inline="false"
-                                                required="true" requiredMessage="Password must be entered.">
-                                    </p:password>
-                                    <p:commandButton id="pwdHelp" styleClass="sigupRegRootHelp0 Fright"
-                                                     icon="fa fa-question Fs18 white"
-                                                     process="@none"/>
+                                <p:password id="pwd1" styleClass="Wid100 Fleft MarAuto Fs14"
+                                            value="#{userBean.pwd1}" placeholder="Password"
+                                            required="true" requiredMessage="Password must be entered.">
 
-                                    <p:overlayPanel id="helpPanel" for="pwdHelp"
-                                                    hideEffect="fade" dynamic="false"
-                                                    showCloseIcon="true"
-                                                    style="width:350px; margin-left: 5px">
-                                        Password must contain a minimum of 8 characters including at least:
-                                        <ul>
-                                            <li>1 uppercase letter</li>
-                                            <li>1 number</li>
-                                            <li>1 of these special characters: !,#$%?:.</li>
-                                        </ul>
-                                    </p:overlayPanel>
+                                </p:password>
+                                <p:commandButton id="pwdHelp"
+                                                 styleClass="Fright sigupRegRootHelp0"
+                                                 icon="fa fa-question Fs14 Black" process="@none"/>
+
+                                <p:overlayPanel id="helpPanel" for="pwdHelp" hideEffect="fade"
+                                                dynamic="false" showCloseIcon="true"
+                                                style="width:350px; margin-left: 5px">
+                                    Password must contain a minimum of 8 characters including at least:
+                                    <ul>
+                                        <li>1 uppercase letter</li>
+                                        <li>1 number</li>
+                                        <li>1 of these special characters: !,#$%?:.</li>
+                                    </ul>
+                                </p:overlayPanel>
                             </div>
                             <div class="EmptyBox10"></div>
                             <div class="Container100">
