--- a/tcm/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
@@ -25,16 +25,18 @@
 						<div class="EmptyBox10"></div>
 						<div class="ContainerIndent">
 							<h3 class="FsRes14">Your application will be processed by
-								Docusign.You will soon receive an two emails for reviewing the
-								application and signature.</h3>
+								Docusign.You will soon receive two emails
+                                (TD Application and Advisor ADV forms)
+                                for reviewing the
+								application and signature for approval.</h3>
 						</div>
 						<div class="ContainerIndent">
 							<h4 class="FsRes13">(Note : If it is a joint account then
-								both will receive an email for signature)</h4>
+								both account holder will receive an email for signature)</h4>
 						</div>
 						<div class="EmptyBox10"></div>
-						<p:button value="OK" styleClass="Fs16 BlueButton"
-							href="" />
+                           <p:commandButton value="OK" styleClass="Fs16 BlueButton"
+                                            actionListener="#{uiLayout.defaultHome}" />
 						<div class="EmptyBox10"></div>
 						
 
